HelloUltraviolet/Fixtures/RejectedSource/Procedures/ResultGenericConstraint/Expected.uv
//! Expected diagnostic metadata for the ResultGenericConstraint rejected-source specimen.

expectedDiagnostic("E-SEM-2525", "rule.15.Result-Generic-Constraint")
